# room_booking

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
gunicorn/: gunicorn.conf.py  gunicorn.sh  nginx.conf
room_booking/: db.sqlite3
room_booking/api/: models.py  serializers.py  urls.py  views.py
room_booking/api/migrations/: 0001_initial.py  0002_alter_room_room_id.py
room_booking/frontend/: urls.py  views.py
room_booking/room_booking/: asgi.py  settings.py  urls.py  wsgi.py
room_booking/static/_astro/: Main.4f6658fc.js  Main.bbd0e3c8.js  Main.fb73bf63.js  ReservationList.76ae948b.js  ReservationList.c91c3e8b.js  ReservationList.f0f095cf.js  ReservingTable.a2ecde09.js  ReservingTable.c6e28809.js  ReservingTable.f2495967.js  ReservingTable.f3692a97.js  constant.452a6a97.js  index.06b35b86.css  index.6816d62d.css  index.7f9fbd97.css  index.c02b4fc9.css
room_booking/templates/: .prettierrc  Dockerfile  astro.config.mjs  docker-compose.yaml  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
room_booking/templates/frontend/: index.html
room_booking/templates/frontend/my-reservation/: index.html
room_booking/templates/frontend/reserve/: index.html
room_booking/templates/public/css/: navbar.css
room_booking/templates/src/api/: bookRoom.ts  getAllRooms.ts  getMyReservation.ts  getRoomReservations.ts
room_booking/templates/src/components/: Header.astro  Header.tsx  LoggedIn.tsx  Main.tsx  MyReservation.tsx  ReservationList.tsx  ReservedHeader.astro  ReservedHeader.tsx  ReservedRow.astro  (+6 more)
scripts/: 40-variables.sh  50-run.sh
(+4 files in other folders)
